fuzz/cases/ingest-invalid-json/stderr.txt
src/main.c:4:1: error: expected ';' before '}' token
    4 | }
      | ^
